; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_fslog.c_match_fpx_event.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_fslog.c_match_fpx_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fpx_event = type { i64, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fpx_event*, i32, i64, i64)* @match_fpx_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @match_fpx_event(%struct.fpx_event* %0, i32 %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.fpx_event*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.fpx_event* %0, %struct.fpx_event** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load i64, i64* %7, align 8
  %10 = load %struct.fpx_event*, %struct.fpx_event** %5, align 8
  %11 = getelementptr inbounds %struct.fpx_event, %struct.fpx_event* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp eq i64 %9, %12
  br i1 %13, label %14, label %27

14:                                               ; preds = %4
  %15 = load i64, i64* %8, align 8
  %16 = load %struct.fpx_event*, %struct.fpx_event** %5, align 8
  %17 = getelementptr inbounds %struct.fpx_event, %struct.fpx_event* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = icmp eq i64 %15, %18
  br i1 %19, label %20, label %27

20:                                               ; preds = %14
  %21 = load i32, i32* %6, align 4
  %22 = load %struct.fpx_event*, %struct.fpx_event** %5, align 8
  %23 = getelementptr inbounds %struct.fpx_event, %struct.fpx_event* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 8
  %25 = call i64 @memcmp(i32 %21, i32 %24, i32 4)
  %26 = icmp eq i64 0, %25
  br label %27

27:                                               ; preds = %20, %14, %4
  %28 = phi i1 [ false, %14 ], [ false, %4 ], [ %26, %20 ]
  %29 = zext i1 %28 to i32
  ret i32 %29
}

declare dso_local i64 @memcmp(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
